# aiogram-template

./: README.md  bot.py  pyproject.toml
tgbot/: config.py
tgbot/constants/: commands.py
tgbot/handlers/: echo.py
tgbot/handlers/admin/: admin.py
tgbot/handlers/users/: user.py
tgbot/utils/: bot.py
